fixed z-indexes on card templates

--- a/templates/magic/M15/Main/template.css
+++ b/templates/magic/M15/Main/template.css
@@ -19,7 +19,7 @@
     border-radius: 4px;
     padding: 10px 6px 0;
     position: relative;
-    z-index: 10;
+    z-index: 200;
 }
 
 .header {
@@ -109,7 +109,7 @@ div.footer {
     align-items: end;
     padding: 0 10px;
     position: relative;
-    z-index: 10;
+    z-index: 200;
 }
 
 auto-fit-line {
